[tool.poetry]
name = "strategyhandler"
version = "0.1.0"
description = "desc"
authors = ["Ivan <sis@indy.su>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"
aiosqlite = "^0.19.0"
greenlet = "^3.0.1"
schedule = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
